# AIS

./: CMakeLists.txt  README.md  components.md  context.md  docker-compose.yml  fetch_all_ids.py  get_cache.lua  get_no_cache.lua  helper.h  index.yml  load_data.cpp  performance.md  task.md  test_cache.sh  test_no_cache.sh  user_id_generator.h  writer_main.cpp
bucket_service/: Dockerfile  http_web_server.h  main.cpp
bucket_service/Headers/: bucket_handler.h  bucket_request_factory.h
config/: config.cpp  config.h
database/: bucket.cpp  bucket.h  cache.cpp  cache.h  database.cpp  database.h  item.cpp  item.h  user.cpp  user.h
item_service/: Dockerfile  http_web_server.h  main.cpp
item_service/Headers/: item_handler.h  item_request_factory.h
mariadb/: commands.sql
proxysql/: proxysql.cnf
user_service/: Dockerfile  http_web_server.h  main.cpp
user_service/Headers/: user_handler.h  user_request_factory.h
writer/: Dockerfile
